css/recipes.css
body {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #FDF3DD;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    width: auto;
    height: 100vh;
    overflow-y: hidden; 
}

.recipes {
    display: flex;
    flex-direction: row;
    gap: 25px;
}

.creator {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    max-width: 350px;
}

.dish {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    width: 1100px;
    gap: 25px;
    flex-wrap: wrap;
}

/* ELEMENTS */

img {
    width: 100px;
}

/* CREATOR */

.rc-top {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    font-family: "Zen Kaku Gothic New";
    font-size: 24px;
    text-transform: uppercase;
    letter-spacing: 5px;
    gap: 15px;
    margin-top: 25px;
}

img.rct-logo {
    max-width: 75px;
}

.rc-bottom {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    background-color: #D6E8F7;
    border-radius: 25px;
    border-style: none;
    width: 350px;
    height: 600px;
}

img.rcb-button {
    display: flex;
    width: 35px;
    align-self: flex-end;
    padding: 20px;
}

/* DISH */
.dish-text , .dish-img {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    width: 350px;
    height: 350px;
}

.dish-text {
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-radius: 25px;
}

.dish-img {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 25px;
}

.dish-text.one {
    background-color: #CAAACD;
}

.dish-img.two {
    background-color: #CB962E;
}

.dish-text.three {
    background-color: #EF601E;
}

.dish-img.four {
    background-color: #EF601E;
}

.dish-text.five {
    background-color: #D6E8F7;
}

.dish-img.six {
    background-color: #F1DFB6;
}

